--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
         "bjeavons/zxcvbn-php": "^0.4"
     },
     "require-dev" : {
-        "squizlabs/php_codesniffer" : "2.9.2",
+        "squizlabs/php_codesniffer" : "3.3.2",
         "phpunit/phpunit" : "6.5.*",
         "facebook/webdriver" : "dev-master",
         "phpmd/phpmd": "^2.6",
-        "phan/phan": ">2.2.4"
+        "phan/phan": ">2.2.4",
+        "slevomat/coding-standard": "~4.0"
     },
     "scripts": {
       "pre-install-cmd": "mkdir -p project/libraries"
